Predicate CHANGELOG

TODO: add explanation of expressions equality with examples, similar to
      bool QDomNode::operator== ( const QDomNode & n ) const

2012-05-21
Predicate
*Qt string handling optimizations added
**-DQT_USE_QSTRINGBUILDER -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII
**http://qt-project.org/doc/qt-4.8/qstring.html#more-efficient-string-construction

2012-03-28
Predicate
*fixed functions returning field's type group name and type group string; they were completely broken but probably only GUI was affected

2011-11-23
Predicate
*Port sql keywords list gen. from kexidb; add more renames from kexidb
*Port KexiDB 2 commit 225a51c6ee: exceptions in form const class &var
*Port KexiDB 2 commit e3db10e10: add methods for removing columns from RecordEditBuffer
*Port 'pass a paramameter by reference' fix from KexiDB 2 commit f47a59d6
*Port 'Initialize variables' fix from KexiDB 2, commit 8600a381ebfd296

2011-02-04
Predicate
*Fix Solaris build in the parser
**BUG:265349

2010-12-30..2011-01-31
Predicate
*(*Expr) classes renamed to *Expression
*expression classes put into enum
*Expression attributes made private, improved related includes (QuerySchemaParameter)
*convenience includes added, now it's possible to use #include <Predicate/Connection>
*Unit test for Expression class added
TODO: add tests for the other Expression* classes

2010-12-17
Predicate
*build system: use Predicate_SOURCE_DIR, Predicate_BINARY_DIR for clarity; generate predicate.pc and install it, append git hash to PREDICATE_VERSION_STRING
2010-12-16
Predicate
*fix memory leak in Connection::insertRecord: Conditional jump or move depends on uninitialised value(s)
*add missing "return dbg.space();" to QDebug operator<<(QDebug dbg, ..), otherwise crashes
PostgreSQL Driver
*fix building connection string, remove crash on closing database
*'tables' test passed

2010-12-15
Predicate